Fixed Quagga link-detect for servers

--- a/roles/quagga/templates/zebra.conf.j2
+++ b/roles/quagga/templates/zebra.conf.j2
@@ -13,6 +13,7 @@ hostname {{ansible_hostname}}
 {% if not intvars[iface].type is defined or intvars[iface].type != "loopback" %}
 interface {{iface}}
   ipv6 nd suppress-ra
+  link-detect
 {% endif %}
 !
 {% endfor %}
